--- a/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
+++ b/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@using MySqlManager.Services
 @using MySqlManager.Dtos
 @inject MySqlManagerService MySqlManagerService
-@rendermode InteractiveServer
+@attribute [StreamRendering]
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -19,9 +19,9 @@
             </NavLink>
         </div>
         
-        @if (DatabaseList != null)
+        @if (MySqlManagerService.DatabaseList.Count > 0)
         {
-            foreach (var item in DatabaseList)
+            foreach (var item in MySqlManagerService.DatabaseList)
             {
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="@($"/database/{item.Name}")">
@@ -41,33 +41,33 @@
         }
         else
         {
-            <text>Layout null</text>
+            <text>Loading Database list...</text>
         }
     </nav>
 </div>
 
 @code {
 
-    [CascadingParameter]
-    public MainLayout? Layout { get; set; }
+    // [CascadingParameter]
+    // public MainLayout? Layout { get; set; }
     
-    public List<DatabaseInformation>? DatabaseList { get; set; }
+    // public List<DatabaseInformation>? DatabaseList { get; set; }
     
-    protected override async Task OnInitializedAsync()
-    {
-        DatabaseList = null;
-        await LoadDatabaseList();
-    }
-    
-    public async Task LoadDatabaseList()
-    {
-        DatabaseList = null;
-        if (await MySqlManagerService.IsConnectionPossible())
-        {
-            Console.WriteLine("Loading database list...");
-            DatabaseList = await MySqlManagerService.GetDatabaseList(false);
-        }
-    }
+    // protected override async Task OnInitializedAsync()
+    // {
+    //     DatabaseList = null;
+    //     await LoadDatabaseList();
+    // }
+    //
+    // public async Task LoadDatabaseList()
+    // {
+    //     DatabaseList = null;
+    //     if (await MySqlManagerService.IsConnectionPossible())
+    //     {
+    //         Console.WriteLine("Loading database list...");
+    //         DatabaseList = await MySqlManagerService.GetDatabaseList(false);
+    //     }
+    // }
     
     
 
